--- a/kb.css
+++ b/kb.css
@@ -2,7 +2,15 @@ html, body {
 	height: 100%;
 	font-family: "Segoe UI", "Arial", "Helvetica", sans-serif;		
 }
-.body { margin: 10px; }
+.body { 
+	margin: 10px; 
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;	
+	user-select: none;
+}
 
 /* Wrapper for page content to push down footer */
 #wrap {
