--- a/kb.css
+++ b/kb.css
@@ -7,6 +7,7 @@ html, body {
 	-moz-user-select: none;
 	-ms-user-select: none;	
 	user-select: none;
+	cursor: default;
 }
 .body { 
 	margin: 10px; 
