Added the ability to "ghost" a keycap.
-- Ghosted keys are dimmed out
-- This is useful for drawing attention to the *unghosted* keys, while
still presenting them in context.

--- a/kb.css
+++ b/kb.css
@@ -65,6 +65,7 @@ html, body {
 }
 .hover .keyborder { border-color: green; }
 .selected .keyborder { border-color: red; }
+.ghosted { opacity: 0.4; }
 
 /* The sides of the cap (darker) */
 .keybg { 
