--- a/kb.css
+++ b/kb.css
@@ -1,6 +1,17 @@
+@font-face {
+	font-family: 'engravers_gothic_fsregular';
+	src: url('fonts/EngraversGothic-Regular-webfont.eot');
+	src: url('fonts/EngraversGothic-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('fonts/EngraversGothic-Regular-webfont.woff') format('woff'),
+		 url('fonts/EngraversGothic-Regular-webfont.ttf') format('truetype'),
+		 url('fonts/EngraversGothic-Regular-webfont.svg#engravers_gothic_fsregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 html, body {
 	height: 100%;
-	font-family: "Segoe UI", "Arial", "Helvetica", sans-serif;		
+	font-family: "Segoe UI", "Arial", "Helvetica", sans-serif;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -32,7 +43,6 @@ html, body {
 
 /* The keyboard background */
 #keyboard {	
-	font-family: "Segoe UI", "Arial", "Helvetica", sans-serif;		
 	padding: 5px;
 	position:relative; 
 	border: solid 1px #ddd; 
@@ -78,8 +88,10 @@ html, body {
 
 /* The face of the cap */
 .keyfg { 
+	font-family: "Helvetica", "Arial", sans-serif;
+	font-size: 12px;
 	position: absolute; 
-	border-radius: 3px; 	
+	border-radius: 3px;
 	display:table-cell;	
 	-webkit-box-sizing:content-box;
 	-moz-box-sizing:content-box;
@@ -95,6 +107,7 @@ html, body {
 	background: linear-gradient(to right,  rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 40%,rgba(0,0,0,0) 60%,rgba(0,0,0,0.1) 100%);
 }
 .DSA .keyfg {
+	font-family: 'engravers_gothic_fsregular'; /* substitute for Gorton Modified */
 	border-radius: 8px; 
 	margin-top: 3px;
 	background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
@@ -109,8 +122,6 @@ html, body {
 .keylabels {
 	display:table-cell;
 	width:100%;
-	font-size: 12px; 
-	font-family: "Helvetica", "Arial", sans-serif;
 }
 .keylabel1 { position: absolute; top: 2px; left: 2px; }
 .keylabel2 { position: absolute; bottom: 2px; left: 2px; }
@@ -170,3 +181,4 @@ html, body {
 
 .shortcuts tr > td:first-child { text-align:right; padding-right: 6px; padding-top: 3px;}
 .shortcuts .shortcut { background-color: #444; color: white; padding: 1px 6px; border-radius:6px; }
+
