--- a/kb.css
+++ b/kb.css
@@ -89,7 +89,6 @@ html, body {
 /* The face of the cap */
 .keyfg { 
 	font-family: "Helvetica", "Arial", sans-serif;
-	font-size: 12px;
 	position: absolute; 
 	border-radius: 3px;
 	display:table-cell;	
@@ -97,6 +96,11 @@ html, body {
 	-moz-box-sizing:content-box;
 	box-sizing:content-box;
 }
+.keyfg .keylabels.textsize1 { font-size: 8px; }
+.keyfg .keylabels.textsize2 { font-size: 10px; }
+.keyfg .keylabels.textsize3 { font-size: 12px; }
+.keyfg .keylabels.textsize4 { font-size: 14px; }
+.keyfg .keylabels.textsize5 { font-size: 16px; }
 
 .DCS .keyfg {
 	background: -moz-linear-gradient(left,  rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.1) 100%);
@@ -110,7 +114,6 @@ html, body {
 	font-family: 'engravers_gothic_fsregular'; /* substitute for Gorton Modified */
 	border-radius: 8px; 
 	margin-top: 3px;
-	font-size: 14px;
 	background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
 	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.15)));
 	background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 100%);
@@ -118,6 +121,11 @@ html, body {
 	background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 100%);
 	background: radial-gradient(ellipse at center,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 100%);
 }
+.DSA .keyfg .keylabels.textsize1 { font-size: 10px; }
+.DSA .keyfg .keylabels.textsize2 { font-size: 12px; }
+.DSA .keyfg .keylabels.textsize3 { font-size: 14px; }
+.DSA .keyfg .keylabels.textsize4 { font-size: 16px; }
+.DSA .keyfg .keylabels.textsize5 { font-size: 18px; }
 
 /* Key labels */
 .keylabels { display: table; }
