--- a/kb.css
+++ b/kb.css
@@ -114,12 +114,12 @@ html, body {
 	font-family: 'engravers_gothic_fsregular'; /* substitute for Gorton Modified */
 	border-radius: 8px; 
 	margin-top: 3px;
-	background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.15)));
-	background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 100%);
-	background: -o-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 100%);
-	background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 100%);
-	background: radial-gradient(ellipse at center,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 100%);
+	background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%, rgba(46,46,46,0.1) 90%, rgba(51,51,51,0.1) 100%);
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,0)), color-stop(90%,rgba(46,46,46,0.1)), color-stop(100%,rgba(51,51,51,0.1)));
+	background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(46,46,46,0.1) 90%,rgba(51,51,51,0.1) 100%);
+	background: -o-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(46,46,46,0.1) 90%,rgba(51,51,51,0.1) 100%);
+	background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(46,46,46,0.1) 90%,rgba(51,51,51,0.1) 100%);
+	background: radial-gradient(ellipse at center,  rgba(0,0,0,0) 0%,rgba(46,46,46,0.1) 90%,rgba(51,51,51,0.1) 100%);
 }
 .DSA .keyfg .keylabels.textsize1 { font-size: 10px; }
 .DSA .keyfg .keylabels.textsize2 { font-size: 12px; }
