Switched to new JSONL parser
The new parser is generated by Jison (a JS parser generator, like
Bison).
-- Modified one of the Jison samples to support our "leniency"
requirement.
-- Added a makefile to build & minify the parser.
-- The new parser also generates better error messages... but they
expect to be displayed in a console.  So I changed the error alert DIV
to use a fixed-width font.

--- a/kb.css
+++ b/kb.css
@@ -171,6 +171,11 @@ html, body {
 	height: 200px;
 	font-family: "Consolas", "Courier New", "Courier", monospace;
 }
+#rawdata-error {
+	font-family: "Consolas", "Courier New", "Courier", monospace;
+	white-space: pre;
+}
+
 .tab-content {
     border-left: 1px solid #ddd;
     border-right: 1px solid #ddd;
