--- a/kb.css
+++ b/kb.css
@@ -101,6 +101,10 @@ html, body {
 .keyfg .keylabels.textsize3 { font-size: 12px; }
 .keyfg .keylabels.textsize4 { font-size: 14px; }
 .keyfg .keylabels.textsize5 { font-size: 16px; }
+.keyfg .keylabels.textsize6 { font-size: 18px; }
+.keyfg .keylabels.textsize7 { font-size: 20px; }
+.keyfg .keylabels.textsize8 { font-size: 22px; }
+.keyfg .keylabels.textsize9 { font-size: 24px; }
 
 .DCS .keyfg {
 	background: -moz-linear-gradient(left,  rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.1) 100%);
@@ -121,11 +125,6 @@ html, body {
 	background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(46,46,46,0.1) 90%,rgba(51,51,51,0.1) 100%);
 	background: radial-gradient(ellipse at center,  rgba(0,0,0,0) 0%,rgba(46,46,46,0.1) 90%,rgba(51,51,51,0.1) 100%);
 }
-.DSA .keyfg .keylabels.textsize1 { font-size: 10px; }
-.DSA .keyfg .keylabels.textsize2 { font-size: 12px; }
-.DSA .keyfg .keylabels.textsize3 { font-size: 14px; }
-.DSA .keyfg .keylabels.textsize4 { font-size: 16px; }
-.DSA .keyfg .keylabels.textsize5 { font-size: 22px; }
 
 /* Key labels */
 .keylabels { display: table; }
