Fix selection rectangle when window is scrolled.
-- Previously used "fixed" position; this is fixed to the window, so
isn't affected by scrolling, which is why it didn't work.
-- Now using "absolute" position; this is relative to the parent
element, so it *is* affected by scrolling.
-- Also had to reparent the selection rectangle so that the coordinates
were correct.

--- a/kb.css
+++ b/kb.css
@@ -163,7 +163,7 @@ html, body {
 /* general styles */
 .hidden { display: none; }
 .error { border: solid 2px rgb(217,83,79); }
-#selectionRectangle { position: fixed; border: dashed 2px red; }
+#selectionRectangle { position: absolute; border: dashed 2px red; }
 
 #rawdata { 
 	width: 100%;
