--- a/kb.css
+++ b/kb.css
@@ -96,15 +96,15 @@ html, body {
 	-moz-box-sizing:content-box;
 	box-sizing:content-box;
 }
-.keyfg .keylabels.textsize1 { font-size: 8px; }
-.keyfg .keylabels.textsize2 { font-size: 10px; }
-.keyfg .keylabels.textsize3 { font-size: 12px; }
-.keyfg .keylabels.textsize4 { font-size: 14px; }
-.keyfg .keylabels.textsize5 { font-size: 16px; }
-.keyfg .keylabels.textsize6 { font-size: 18px; }
-.keyfg .keylabels.textsize7 { font-size: 20px; }
-.keyfg .keylabels.textsize8 { font-size: 22px; }
-.keyfg .keylabels.textsize9 { font-size: 24px; }
+.keyfg .keylabel.textsize1 { font-size: 8px; }
+.keyfg .keylabel.textsize2 { font-size: 10px; }
+.keyfg .keylabel.textsize3 { font-size: 12px; }
+.keyfg .keylabel.textsize4 { font-size: 14px; }
+.keyfg .keylabel.textsize5 { font-size: 16px; }
+.keyfg .keylabel.textsize6 { font-size: 18px; }
+.keyfg .keylabel.textsize7 { font-size: 20px; }
+.keyfg .keylabel.textsize8 { font-size: 22px; }
+.keyfg .keylabel.textsize9 { font-size: 24px; }
 
 .DCS .keyfg {
 	background: -moz-linear-gradient(left,  rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.1) 100%);
