--- a/kb.css
+++ b/kb.css
@@ -105,6 +105,14 @@ html, body {
 .keyfg .keylabel.textsize7 { font-size: 20px; }
 .keyfg .keylabel.textsize8 { font-size: 22px; }
 .keyfg .keylabel.textsize9 { font-size: 24px; }
+.keyfg .keylabel hr { display: inline; }
+.keyfg .keylabel hr:before { 
+	position: relative; 
+	display: block; 
+	overflow: hidden; 
+	white-space: nowrap; 
+	content: "\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500"; 
+}
 
 .DCS .keyfg {
 	background: -moz-linear-gradient(left,  rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.1) 100%);
@@ -128,7 +136,7 @@ html, body {
 
 /* Key labels */
 .keylabels { display: table; }
-.keylabel {	display: table-row; position: absolute;	left:1px; top:1px; right:1px; bottom:1px; }
+.keylabel { display: table-row; position: absolute; left:2px; top:2px; right:2px; bottom:2px; }
 .keylabel > div { display: table-cell; }
 .keylabel3>div, .keylabel4>div, .keylabel6>div, .keylabel8>div { text-align: right; }
 .keylabel7>div, .keylabel8>div { vertical-align: middle; }
