--- a/kb.css
+++ b/kb.css
@@ -73,6 +73,8 @@ html, body {
 	-moz-box-sizing:content-box;
 	box-sizing:content-box;
 }
+.keyborder.inner { opacity: 0.1; }
+
 .hover .keyborder { border-color: green; }
 .selected .keyborder { border-color: red; }
 .ghosted { opacity: 0.4; }
