--- a/kb.css
+++ b/kb.css
@@ -136,6 +136,14 @@ html, body {
 	background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(46,46,46,0.1) 90%,rgba(51,51,51,0.1) 100%);
 	background: radial-gradient(ellipse at center,  rgba(0,0,0,0) 0%,rgba(46,46,46,0.1) 90%,rgba(51,51,51,0.1) 100%);
 }
+.DCS.SPACE .keyfg, .DSA.SPACE .keyfg {
+	background: -moz-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.1) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0,0,0,0.1)), color-stop(40%, rgba(0,0,0,0)), color-stop(60%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.1)));
+	background: -webkit-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.1) 100%);
+	background: -o-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.1) 100%);
+	background: -ms-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.1) 100%);
+	background: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 60%, rgba(0,0,0,0.1) 100%);
+}
 
 /* Key labels */
 .keylabels { display: table; }
