--- a/kb.css
+++ b/kb.css
@@ -153,7 +153,7 @@ html, body {
 .keylabel7>div, .keylabel8>div { vertical-align: middle; }
 .keylabel2>div, .keylabel4>div { vertical-align: bottom; }
 .keylabel5, .keylabel6 { top:100%; margin-top:0px; font-size: 10px !important; white-space:nowrap; overflow: hidden;}
-.DSA .keylabel5, .keylabel6 { margin-top:-1px; font-size: 9px !important; }
+.DSA .keylabel5, .DSA .keylabel6 { margin-top:-1px; font-size: 9px !important; }
 .keylabel1.centerx-true>div, .keylabel2.centerx-true>div, .keylabel5.centerf-true>div, .keylabel7.centerx-true>div { text-align: center; }
 .keylabel1.centery-true>div, .keylabel3.centery-true>div { vertical-align: middle; }
 
@@ -223,3 +223,8 @@ html, body {
 .hint--rounded:after { width: 300px; }
 .hint:after, [data-hint]:after { white-space: pre-line; }
 .hint:before, .hint:after, [data-hint]:before, [data-hint]:after { -webkit-transition: 0.1s ease; -moz-transition: 0.1s ease; transition: 0.1s ease; }
+
+#swap-colors {
+	position: relative;
+	top: 15px;
+}
