--- a/kb.css
+++ b/kb.css
@@ -8,6 +8,22 @@
 	font-weight: normal;
 	font-style: normal;
 }
+@font-face {
+	 font-family: "C64 Pro Mono";
+   src: url('fonts/C64_Pro_Mono-STYLE.eot');
+   src: url('fonts/C64_Pro_Mono-STYLE.eot?#iefix') format('embedded-opentype'),
+		 url('fonts/C64_Pro_Mono-STYLE.woff') format('woff'),
+		 url('fonts/C64_Pro_Mono-STYLE.ttf') format('truetype'),
+		 url('fonts/C64_Pro_Mono-STYLE.svg#C64ProMono') format('svg');
+}
+@font-face {
+	 font-family: "C64 Pro";
+   src: url('fonts/C64_Pro-STYLE.eot');
+   src: url('fonts/C64_Pro-STYLE.eot?#iefix') format('embedded-opentype'),
+		 url('fonts/C64_Pro-STYLE.woff') format('woff'),
+		 url('fonts/C64_Pro-STYLE.ttf') format('truetype'),
+		 url('fonts/C64_Pro-STYLE.svg#C64Pro') format('svg');
+}
 
 html, body {
 	height: 100%;
@@ -147,6 +163,17 @@ html, body {
 	background: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 40%, rgba(0,0,0,0.1) 100%);
 	background-repeat: no-repeat;
 }
+.PETSCII .keyfg .keylabel5 {
+	font-family: "C64 Pro Mono";
+	font-size: 6px !important;
+	z-index: 999;
+}
+span.box { 
+	border: solid 1px;
+	letter-spacing: 0px;
+	padding: 0;
+	margin: 0;
+ }
 
 /* Key labels */
 .keylabels { display: table; }
