--- a/kb.css
+++ b/kb.css
@@ -133,7 +133,7 @@ html, body {
 	content: "\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500\2500"; 
 }
 
-.DCS .keyfg {
+.DCS .keyfg, .OEM .keyfg {
 	background: -moz-linear-gradient(left,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 40%, rgba(0,0,0,0.1) 60%, rgba(0,0,0,0) 100%);
 	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(40%,rgba(0,0,0,0.1)), color-stop(60%,rgba(0,0,0,0.1)), color-stop(100%,rgba(0,0,0,0)));
 	background: -webkit-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 40%,rgba(0,0,0,0.1) 60%,rgba(0,0,0,0) 100%);
@@ -142,11 +142,10 @@ html, body {
 	background: linear-gradient(to right,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 40%,rgba(0,0,0,0.1) 60%,rgba(0,0,0,0) 100%);
 	background-repeat: no-repeat;
 }
-.DSA .keyborder.inner, .SA .keyborder.inner { margin-top: 3px; border-radius: 8px; }
+.DSA .keyborder.inner, .DSA .keyfg { margin-top: 3px; border-radius: 8px; }
+.SA .keyborder.inner, .SA .keyfg { margin-top: 1px; border-radius: 5px; }
 .DSA .keyfg, .SA .keyfg {
 	font-family: 'engravers_gothic_fsregular'; /* substitute for Gorton Modified */
-	border-radius: 8px; 
-	margin-top: 3px;
 	background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.1) 10%, rgba(0,0,0,0) 100%);
 	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,0.1)), color-stop(10%,rgba(0,0,0,0.1)), color-stop(100%,rgba(0,0,0,0)));
 	background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.1) 0%,rgba(0,0,0,0.1) 10%,rgba(0,0,0,0) 100%);
@@ -155,7 +154,8 @@ html, body {
 	background: radial-gradient(ellipse at center,  rgba(0,0,0,0.1) 0%,rgba(0,0,0,0.1) 10%,rgba(0,0,0,0) 100%);
 	background-repeat: no-repeat;
 }
-.DCS.SPACE .keyfg, .DSA.SPACE .keyfg, .SA.SPACE .keyfg {
+
+.DCS.SPACE .keyfg, .OEM.SPACE .keyfg, .DSA.SPACE .keyfg, .SA.SPACE .keyfg {
 	background: -moz-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 40%, rgba(0,0,0,0.1) 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0,0,0,0.1)), color-stop(20%, rgba(0,0,0,0)), color-stop(40%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.1)));
 	background: -webkit-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 40%, rgba(0,0,0,0.1) 100%);
@@ -164,15 +164,21 @@ html, body {
 	background: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 40%, rgba(0,0,0,0.1) 100%);
 	background-repeat: no-repeat;
 }
-.DSA.DISH .keyfg, .DSA.HOMING .keyfg {
-	background: -moz-radial-gradient(circle, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.04) 60%);
-	background: -webkit-gradient(radial, center center, 50%, center center, 60%, from(rgba(0,0,0,0.1)), to(rgba(0,0,0,0.04)));
-	background: -webkit-radial-gradient(circle, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.04) 60%);
-	background: -o-radial-gradient(circle, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.04) 60%);
-	background: -ms-radial-gradient(circle, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.04) 60%);
-	background: radial-gradient(circle, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.04) 60%);
+.DSA.DISH .keyfg, .DSA.HOMING .keyfg, .SA.HOMING .keyfg {
+	background: -moz-radial-gradient(circle, rgba(0,0,0,0.11) 50%, rgba(0,0,0,0.04) 60%);
+	background: -webkit-gradient(radial, center center, 50%, center center, 60%, from(rgba(0,0,0,0.12)), to(rgba(0,0,0,0.04)));
+	background: -webkit-radial-gradient(circle, rgba(0,0,0,0.11) 50%, rgba(0,0,0,0.04) 60%);
+	background: -o-radial-gradient(circle, rgba(0,0,0,0.11) 50%, rgba(0,0,0,0.04) 60%);
+	background: -ms-radial-gradient(circle, rgba(0,0,0,0.11) 50%, rgba(0,0,0,0.04) 60%);
+	background: radial-gradient(circle, rgba(0,0,0,0.11) 50%, rgba(0,0,0,0.04) 60%);
 	background-repeat: no-repeat;
 }
+.HOMING .keyfg .keylabels {
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAACCAYAAABhYU3QAAAAGElEQVQI12P4//+/ODGYAUwwMAThwyA1ACUKJ4H2Fi17AAAAAElFTkSuQmCC);
+  background-repeat: no-repeat;
+  background-position: center 90%;
+}
+.DSA.HOMING .keyfg .keylabels, .SA.HOMING .keyfg .keylabels { background-image: none; }
 
 span.PETSCII { 
 	font-family: "C64 Pro Mono";
