Small CSS tweak to make keys look better
-- Wasn't very obvious at 100%, but if you zoomed in, you could tell
that the border was getting clipped by a background <div> that was on
top of it.

--- a/kb.css
+++ b/kb.css
@@ -90,7 +90,7 @@ html, body {
 	-moz-box-sizing:content-box;
 	box-sizing:content-box;
 }
-.keyborder.inner { opacity: 0.1; }
+.keyborder.inner { opacity: 0.1; border-radius: 4px; }
 
 .hover .keyborder { border-color: green; }
 .selected .keyborder { border-color: red; }
